vlib/v/checker/tests/string_escape_u16_err_b.vv
fn main() {
    println('\u345')
}
